[package]
name = "a"
version = "0.1.0"
edition = "2021"

[dependencies]
bat = "0.22.1"
clipboard = "0.5.0"
copypasta-ext = "0.4.4"
http = "0.2.9"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

[features]
clipboard = []

default = ["clipboard"]
